--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint:fix": "eslint --fix **/*.js"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.4.4",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.25.1",
     "cors": "2.8.5",
@@ -22,11 +23,14 @@
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
     "lowdb": "^1.0.0",
+    "mailgen": "^2.0.14",
     "mongodb": "^3.6.6",
     "mongoose": "^5.12.10",
     "mongoose-paginate-v2": "^1.3.18",
     "morgan": "1.10.0",
     "multer": "^1.4.2",
+    "nanoid": "^3.1.23",
+    "nodemailer": "^6.6.1",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "uuid": "^8.3.2"
